@@ -1,5 +1,10 @@
 2007-02-23  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
+	PR fortran/30681
+	* gfortran.dg/pr17229.f: Change "Obsolete" to "Obsolescent".
+
+2007-02-23  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
 	PR libgfortran/30910	
 	* gfortran.dg/fmt_zero_precision.f90: Update test.
 
